examples/test/testpolicy9204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9204
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key11: value14
      key17: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value11
      podSelector:
        matchLabels:
          key6: value9
          key10: value18
          key31: value2
